what am i doing halp

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,15 +1,15 @@
-// These colors are specific to the theme. Do not use in a package!
+// Grays
+@gray-100: #EDF4F2;
+@gray-200: #E4E4DA;
+@gray-400: #768C98;
+@gray-700: #302B3C;
+@gray-900: #272228;
 
-@very-light-gray: #c5c8c6;
-@light-gray: #969896;
-@gray: #373b41;
-@dark-gray: #282a2e;
-@very-dark-gray: #1d1f21;
-
-@cyan: #8abeb7;
-@blue: #81a2be;
-@purple: #b294bb;
-@green: #b5bd68;
-@red: #cc6666;
-@orange: #de935f;
-@light-orange: #f0c674;
+// Colours
+@cyan: #71DFE5;
+@blue: #55C1F1;
+@purple: #F87CD6;
+@green: #B4E935;
+@red: #FA6681;
+@orange: #FFAC58;
+@light-orange: #FFF38D;
