--- a/styles/base.less
+++ b/styles/base.less
@@ -35,11 +35,11 @@ atom-text-editor {
   .gutter .line-number.folded,
   .gutter .line-number:after,
   .fold-marker:after {
-    color: @light-gray;
+    color: @gray-400;
   }
 
   .invisible {
-    color: @syntax-text-color;
+    color: @gray-400;
   }
 
   .cursor {
@@ -55,7 +55,7 @@ atom-text-editor {
 // Syntax styles
 
 .syntax--comment {
-  color: @light-gray;
+  color: @gray-400;
 }
 
 .syntax--keyword {
@@ -103,7 +103,7 @@ atom-text-editor {
 }
 
 .syntax--variable {
-  color: @red;
+  color: @purple;
 
   &.syntax--interpolation {
     color: darken(@red, 10%);
@@ -122,7 +122,6 @@ atom-text-editor {
 .syntax--string {
   color: @green;
 
-
   &.syntax--regexp {
     color: @cyan;
 
@@ -139,7 +138,7 @@ atom-text-editor {
 .syntax--punctuation {
   &.syntax--definition {
     &.syntax--comment {
-      color: @light-gray;
+      color: @gray-400;
     }
 
     &.syntax--string,
@@ -211,7 +210,7 @@ atom-text-editor {
   }
 
   &.syntax--other.syntax--attribute-name {
-    color: @orange;
+    color: @light-orange;
 
     &.syntax--id {
       color: @blue;
@@ -237,8 +236,12 @@ atom-text-editor {
   }
 
   &.syntax--separator {
-    background-color: @gray;
+    background-color: @gray-400;
     color: @syntax-text-color;
+  }
+
+  &.syntax--property-list {
+    color: @gray-200;
   }
 }
 
